inicio das configurações e primeiro metodo de API pronto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=confeitaria
+server.port=9897
+
+spring.datasource.url=jdbc:postgresql:confeitaria_db
+spring.datasource.username=postgres
+spring.datasource.password=masterkey
+
+spring.jpa.hibernate.ddl-auto=update
